[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/Background/Background.gd" type="Script" id=1]
[ext_resource path="res://Resources/Custom/background.png" type="Texture" id=2]
[ext_resource path="res://Resources/Custom/Characters.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Background/Star1.gd" type="Script" id=4]
[ext_resource path="res://Scenes/DialogBoxes/size1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/DialogBoxes/size5left.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/DialogBoxes/size7think.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 64, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 80, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 96, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 112, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ), SubResource( 2 ), SubResource( 5 ), SubResource( 6 ), SubResource( 5 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 9 ), SubResource( 8 ), SubResource( 11 ), SubResource( 12 ), SubResource( 11 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.984314, 0.454902, 0.176471, 1 )

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="Sky" type="Panel" parent="."]
margin_right = 384.0
margin_bottom = 304.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stars" type="Node2D" parent="Sky"]

[node name="Star1" type="Sprite" parent="Sky/Stars"]
position = Vector2( 88, 80 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 80, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Sky/Stars/Star1"]
wait_time = 8.0
one_shot = true

[node name="Tween" type="Tween" parent="Sky/Stars/Star1"]

[node name="Star2" type="Sprite" parent="Sky/Stars"]
position = Vector2( 328, 96 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Sky/Stars/Star2"]
one_shot = true

[node name="Tween" type="Tween" parent="Sky/Stars/Star2"]

[node name="Star3" type="Sprite" parent="Sky/Stars"]
position = Vector2( 224, 112 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 96, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Sky/Stars/Star3"]
one_shot = true

[node name="Tween" type="Tween" parent="Sky/Stars/Star3"]

[node name="Star4" type="Sprite" parent="Sky/Stars"]
position = Vector2( 184, 48 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Sky/Stars/Star4"]
one_shot = true

[node name="Tween" type="Tween" parent="Sky/Stars/Star4"]

[node name="Star5" type="Sprite" parent="Sky/Stars"]
position = Vector2( 352, 32 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 80, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Sky/Stars/Star5"]

[node name="Timer" type="Timer" parent="Sky/Stars/Star5"]
one_shot = true

[node name="Star6" type="Sprite" parent="Sky/Stars"]
position = Vector2( 48, 144 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Sky/Stars/Star6"]

[node name="Timer" type="Timer" parent="Sky/Stars/Star6"]
one_shot = true

[node name="Star7" type="Sprite" parent="Sky/Stars"]
position = Vector2( 360, 176 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Sky/Stars/Star7"]

[node name="Timer" type="Timer" parent="Sky/Stars/Star7"]
one_shot = true

[node name="Star8" type="Sprite" parent="Sky/Stars"]
position = Vector2( 24, 32 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Sky/Stars/Star8"]

[node name="Timer" type="Timer" parent="Sky/Stars/Star8"]
one_shot = true

[node name="Star9" type="Sprite" parent="Sky/Stars"]
position = Vector2( 136, 104 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Sky/Stars/Star9"]

[node name="Timer" type="Timer" parent="Sky/Stars/Star9"]
one_shot = true

[node name="Star10" type="Sprite" parent="Sky/Stars"]
position = Vector2( 256, 64 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 80, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Sky/Stars/Star10"]

[node name="Timer" type="Timer" parent="Sky/Stars/Star10"]
one_shot = true

[node name="Star11" type="Sprite" parent="Sky/Stars"]
position = Vector2( 144, 24 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Sky/Stars/Star11"]

[node name="Timer" type="Timer" parent="Sky/Stars/Star11"]
one_shot = true

[node name="Star12" type="Sprite" parent="Sky/Stars"]
position = Vector2( 296, 112 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Sky/Stars/Star12"]

[node name="Timer" type="Timer" parent="Sky/Stars/Star12"]
one_shot = true

[node name="Star13" type="Sprite" parent="Sky/Stars"]
position = Vector2( 10, 111 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Sky/Stars/Star13"]

[node name="Timer" type="Timer" parent="Sky/Stars/Star13"]
one_shot = true

[node name="Star14" type="Sprite" parent="Sky/Stars"]
position = Vector2( 304, 16 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Sky/Stars/Star14"]

[node name="Timer" type="Timer" parent="Sky/Stars/Star14"]
one_shot = true

[node name="Star16" type="Sprite" parent="Sky/Stars"]
position = Vector2( 288, 176 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Sky/Stars/Star16"]

[node name="Timer" type="Timer" parent="Sky/Stars/Star16"]
one_shot = true

[node name="Star15" type="Sprite" parent="Sky/Stars"]
position = Vector2( 200, 184 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 80, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Sky/Stars/Star15"]

[node name="Timer" type="Timer" parent="Sky/Stars/Star15"]
one_shot = true

[node name="Star17" type="Sprite" parent="Sky/Stars"]
position = Vector2( 0, 200 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 112, 0, 16, 16 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Sky/Stars/Star17"]

[node name="Timer" type="Timer" parent="Sky/Stars/Star17"]
one_shot = true

[node name="UFO" type="Sprite" parent="."]
position = Vector2( 345, 203 )
rotation = 0.231146
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="Tween" type="Tween" parent="UFO"]

[node name="Spaceship" type="Node2D" parent="."]
position = Vector2( 41, 191 )
rotation = -0.233475
scale = Vector2( 2, 2 )

[node name="Top" type="Sprite" parent="Spaceship"]
position = Vector2( 1.52588e-05, -7.00002 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 16, 0, 16, 16 )

[node name="Bottom" type="Sprite" parent="Spaceship"]
position = Vector2( 5.72205e-06, 7.99995 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="Ground" type="TextureRect" parent="."]
margin_top = -8.0
margin_right = 384.0
margin_bottom = 632.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alien" type="Node2D" parent="Ground"]

[node name="Alien" type="Sprite" parent="Ground/Alien"]
position = Vector2( 249, 189 )
rotation = 0.0942478
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 64, 0, 16, 16 )

[node name="Blushes" type="Node2D" parent="Ground/Alien/Alien"]
modulate = Color( 1, 1, 1, 0 )

[node name="Sprite2" type="Sprite" parent="Ground/Alien/Alien/Blushes"]
position = Vector2( 1.9782, -3.71485 )
scale = Vector2( 0.250986, 0.315193 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 80, 16, 16, 16 )

[node name="Sprite" type="Sprite" parent="Ground/Alien/Alien/Blushes"]
position = Vector2( -2.05746, -3.75712 )
scale = Vector2( 0.244312, 0.315193 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 80, 16, 16, 16 )

[node name="Tween" type="Tween" parent="Ground/Alien/Alien/Blushes"]

[node name="AlienWalk" type="AnimatedSprite" parent="Ground/Alien"]
position = Vector2( 249, 189 )
rotation = 0.0942478
scale = Vector2( 1e-05, 4 )
frames = SubResource( 7 )
frame = 8
playing = true

[node name="Tween" type="Tween" parent="Ground/Alien"]

[node name="Human" type="Node2D" parent="Ground"]

[node name="Tween" type="Tween" parent="Ground/Human"]

[node name="HumanWalk" type="AnimatedSprite" parent="Ground/Human"]
position = Vector2( 131, 189 )
rotation = -0.0931873
scale = Vector2( 1e-05, 4 )
frames = SubResource( 13 )
frame = 4
playing = true

[node name="Human" type="Sprite" parent="Ground/Human"]
position = Vector2( 131, 189 )
rotation = -0.0931873
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 48, 0, 16, 16 )

[node name="Bottom" type="Panel" parent="Ground"]
margin_top = 616.0
margin_right = 384.0
margin_bottom = 744.0
mouse_filter = 2
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dirt" type="Node2D" parent="Ground"]

[node name="Dirt1" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 120, 240 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 128, 0, 16, 16 )

[node name="Dirt2" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 304, 264 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 160, 0, 16, 16 )

[node name="Dirt3" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 25, 277 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 176, 0, 16, 16 )

[node name="Dirt4" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 184, 288 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 224, 0, 16, 16 )

[node name="Dirt5" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 376, 264 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 240, 0, 16, 16 )

[node name="Dirt6" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 144, 360 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 208, 0, 16, 16 )

[node name="Dirt7" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 40, 384 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 144, 0, 16, 16 )

[node name="Dirt8" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 320, 344 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 176, 0, 16, 16 )

[node name="Dirt9" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 176, 464 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 192, 0, 16, 16 )

[node name="Dirt10" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 264, 416 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 128, 0, 16, 16 )

[node name="Dirt11" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 336, 512 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 160, 0, 16, 16 )

[node name="Dirt12" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 48, 536 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 176, 0, 16, 16 )

[node name="Dirt13" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 176, 576 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 224, 0, 16, 16 )

[node name="Dirt14" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 360, 600 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 128, 0, 16, 16 )

[node name="Dirt15" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 88, 616 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 208, 0, 16, 16 )

[node name="Dirt16" type="Sprite" parent="Ground/Dirt"]
position = Vector2( 272, 584 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 144, 0, 16, 16 )

[node name="DialogBoxes" type="Node2D" parent="."]

[node name="Left" parent="DialogBoxes" instance=ExtResource( 6 )]
visible = false
position = Vector2( 14, 104 )
scale = Vector2( 1.5, 1.5 )

[node name="Right" parent="DialogBoxes" instance=ExtResource( 5 )]
visible = false
modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( 221, 102 )
scale = Vector2( 1.5, 1.5 )

[node name="Think" parent="DialogBoxes" instance=ExtResource( 7 )]
position = Vector2( 14, 104 )
scale = Vector2( 1.5, 1.5 )

[node name="Tween" type="Tween" parent="DialogBoxes/Think"]

[node name="Tween" type="Tween" parent="DialogBoxes"]

[node name="QueuefreeTimer" type="Timer" parent="."]
wait_time = 2.8
one_shot = true

[node name="SceneChangeTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Sky/Stars/Star1/Timer" to="Sky/Stars/Star1" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star2/Timer" to="Sky/Stars/Star2" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star3/Timer" to="Sky/Stars/Star3" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star4/Timer" to="Sky/Stars/Star4" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star5/Timer" to="Sky/Stars/Star5" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star6/Timer" to="Sky/Stars/Star6" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star7/Timer" to="Sky/Stars/Star7" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star8/Timer" to="Sky/Stars/Star8" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star9/Timer" to="Sky/Stars/Star9" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star10/Timer" to="Sky/Stars/Star10" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star11/Timer" to="Sky/Stars/Star11" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star12/Timer" to="Sky/Stars/Star12" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star13/Timer" to="Sky/Stars/Star13" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star14/Timer" to="Sky/Stars/Star14" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star16/Timer" to="Sky/Stars/Star16" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star15/Timer" to="Sky/Stars/Star15" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sky/Stars/Star17/Timer" to="Sky/Stars/Star17" method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="DialogBoxes/Tween" to="." method="_on_dialog_shown"]
[connection signal="timeout" from="QueuefreeTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SceneChangeTimer" to="." method="_on_SceneChangeTimer_timeout"]
